<resources>
    <string name="ExpDateListProd">Expiration date: </string>
    <string name="PriceListProd">Price: </string>
    <string name="aboutToExpire">ABOUT TO EXPIRE</string>
    <string name="accountDetails">Account details</string>
    <string name="adFreeVersion">Ad-free version </string>
    <string name="add">Add</string>
    <string name="addPhoto"> Add photo</string>
    <string name="addPhotoDescription">Add photos from your gallery or take a picture with your camera</string>
    <string name="addProductToStock">Add a product</string>
    <string name="allArticles">All articles</string>
    <string name="allProducts">All products</string>
    <string name="appName">Janari0</string>
    <string name="articles">Articles</string>
    <string name="changeName">Name</string>
    <string name="changeProfilePhoto">Change photo</string>
    <string name="confirm">confirm</string>
    <string name="contactSeller">Contact Seller</string>
    <string name="contactSellerSell">If you don\'t have a phone number submitted in your profile, potential buyers will not be able to reach you</string>
    <string name="createAccount">Create account</string>
    <string name="currentPassword">Current password</string>
    <string name="defaultDescription">No description</string>
    <string name="defaultEmail">name.lastname@gmail.com</string>
    <string name="defaultName">Scofield11</string>
    <string name="defaultUploadedDescription">164389594560285.jpg</string>
    <string name="description">Description</string>
    <string name="donate">Donate</string>
    <string name="dummy"> Holly smokes, it works!</string>
    <string name="editProfile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="email2">email@email.com</string>
    <string name="enterDescription">Enter description:</string>
    <string name="enterExpirationDate">Enter expiration date:</string>
    <string name="enterNameProduct">Enter name of the product:</string>
    <string name="euroSymbol">€</string>
    <string name="euros">0.00</string>
    <string name="expirationDate">Expiration date</string>
    <string name="expiredProducts">Expired products</string>
    <string name="forgetPassword">Forgot your password?</string>
    <string name="free">free</string>
    <string name="fresh">FRESH</string>
    <string name="freshProducts">Fresh products</string>
    <string name="fromGallery">From gallery</string>
    <string name="helloThere">Hello there!</string>
    <string name="incorrectPassword">Incorrect username or password</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="invalidUsername">Invalid username</string>
    <string name="language">Language</string>
    <string name="layoutChangeEmail">Change email</string>
    <string name="layoutChangeName">Change username</string>
    <string name="layoutChangePassword">Change password</string>
    <string name="layoutChangePhoneNumber">Change phone number</string>
    <string name="layoutEditProfile">Edit profile</string>
    <string name="layoutProfile">Profile</string>
    <string name="login">Login</string>
    <string name="money">Money</string>
    <string name="name">Name</string>
    <string name="newPasword">New Password</string>
    <string name="next">Next</string>
    <string name="notAMember">You are not a member?</string>
    <string name="numberProducts"> 3</string>
    <string name="onSale"> ON SALE!</string>
    <string name="oneWeek"> WITHIN ONE WEEK</string>
    <string name="password">Password</string>
    <string name="passwordShouldBe">Password should be at least 6 characters</string>
    <string name="passwordUpdated">Password updated.</string>
    <string name="passwordsDontMatch">Passwords don\'t match</string>
    <string name="phoneNumber">Phone number</string>
    <string name="pleaseFillAllFields">Please fill all the fields</string>
    <string name="price">Price</string>
    <string name="prod">PRODUCTS</string>
    <string name="prodExpired">EXPIRED</string>
    <string name="prodOnSale">PRODUCTS ON SALE: 0</string>
    <string name="productDeleted">Product deleted</string>
    <string name="productDescription"> Product description</string>
    <string name="productList"> Product list</string>
    <string name="productName"> Product name</string>
    <string name="products">Products</string>
    <string name="putPrice"> Put price</string>
    <string name="recommended">Recommended</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="saveChanges">Save Changes</string>
    <string name="scan">Take Photo</string>
    <string name="scan2">Scan Code</string>
    <string name="scanPage">Scan</string>
    <string name="searchHint">Search Products</string>
    <string name="searchProduct"> Search a product</string>
    <string name="selectProduct"> Select a product from your grocery list</string>
    <string name="sellIt">Sell It!</string>
    <string name="sellProduct">Put product on sale</string>
    <string name="sellerPhoneNumber">Seller\'s phone number: </string>
    <string name="sendPasswordResetLink">Send password reset link</string>
    <string name="settings">Settings</string>
    <string name="signOut">Sign Out</string>
    <string name="signUp">Sign up</string>
    <string name="spanishCode">+34</string>
    <string name="submit">Submit</string>
    <string name="takeAPhoto">Take a photo</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="whatIsYourEmail">What is your email?</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="yourGroceries">Your groceries</string>
    <string name="wpmessage1">Hello! I want to talk to you about your product: </string>
    <string name="wpmessage2"> from the JanariO app </string>
    <string name="nearby">Nearby</string>
    <string name="Free">Free</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>